--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ trashdir/
 
 # Ignore external libraries (if you're using Composer)
 /vendor/
-
+wiris/
+wq/
 # Ignore log files
 /error.log
 /access.log
